--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 /*@media screen and (device-width: 768px) {*/
     body {
-        font-size: 300%;
+        font-size: 6em;
     }
     
     .up-table {
@@ -70,3 +70,18 @@
     .list-item.is-done {
         text-decoration: line-through
     }
+
+
+.input-lg {
+    font-size: 50px;
+}
+
+@media (min-width: 768px) {        
+    .col-sm-offset-half {
+        margin-left: 4.15555%;
+    }
+}
+
+.col-xs-offset-half {
+    margin-left: 4.15555%;
+}
