--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,10 @@
         max-height: 600px;
         overflow-y: scroll;
     }
+
+    .up-table.max-height {
+        max-height: 100%;
+    }
     
     .btn-lg {
         padding: 15px 24px;
@@ -69,6 +73,9 @@
 
     .list-item.is-done {
         text-decoration: line-through
+    }
+    .list-item.date {
+        font-size: 0.65em;
     }
 
 
